[workspace]
members = ["boot"]

[package]
name = "rmikanos"
version = "0.1.0"
authors = ["Yuta OHWATARI <yuta_ohwatari@voyagegroup.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.10.4"
conquer-once = { version = "0.3.2", default-features = false }
spin = "0.9.0"
